<resources>
    <string name="app_name">Clicker</string>
    <string name="start">Classic</string>
    <string name="room">Capacity</string>
    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="instruction">Enter the room capacity</string>
    <string name="cancel">Cancel</string>
    <string name="cancelled">Cancelled</string>
    <string name="clear">Clear Counter</string>
    <string name="submit">Submit</string>
    <string name="try_again">Try again!</string>
    <string name="capahigh">The new capacity cannot be empty or lower than the current capacity</string>
    <string name="warningIns">Ins has to be greater than outs</string>
    <string name="warningOuts">Outs cannot be greater than Ins</string>
    <string name="in">INS</string>
    <string name="out">OUT</string>
    <string name="total">TOTAL</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="capacity">Capacity</string>
    <string name="warning">You have exceeded your Capacity.</string>
    <string name="message">Your capacity declared was: %d</string>
    <string name="exit">Exit</string>
    <string name="increase">Increase capacity</string>
    <string name="confirmation">Are you sure you want to clear?</string>
    <string name="empty">Your venue is empty</string>
    <string name="settings">Settings</string>
    <string name="setins">Set Ins</string>
    <string name="setouts">Set Outs</string>
    <string name="setcapa">Set Capacity</string>
    <string name="required">Required</string>

</resources>