<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".RoomFragment">

    <data>
        <variable
            name="roomFragment"
            type="com.example.clickermain.RoomFragment" />
        <variable
            name="viewModel"
            type="com.example.clickermain.model.ClickViewModel" />
    </data>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">
            <!-- TODO: Update blank fragment layout -->
            <Button
                android:id="@+id/cancel"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_padding"
                android:layout_marginEnd="@dimen/default_padding"
                android:onClick="@{()->roomFragment.navigate()}"
                android:text="@string/cancel"
                app:layout_constraintBaseline_toBaselineOf="@+id/submit"
                app:layout_constraintEnd_toStartOf="@+id/submit"
                app:layout_constraintStart_toStartOf="parent" />

            <Button
                android:id="@+id/submit"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:onClick="@{()->roomFragment.onSubmitWord()}"
                android:text="@string/submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/cancel"
                app:layout_constraintTop_toBottomOf="@+id/textField" />

            <View
                android:id="@+id/textView_instructions"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/default_margin"
                app:layout_constraintBottom_toTopOf="@+id/textField"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_unscrambled_word" />

            <TextView
                android:id="@+id/textView_unscrambled_word"
                android:text="@string/app_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline3"
                app:layout_constraintBottom_toTopOf="@+id/textView_instructions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField"
                style="@style/Widget.Unscramble.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/default_margin"
                android:hint="@string/instruction"
                app:errorIconDrawable="@drawable/ic_error"
                app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintBottom_toTopOf="@+id/submit"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView_instructions">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="number"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>
</layout>